// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alter_operator.sql > line 1 1`] = `
[
  "CREATE FUNCTION alter_op_test_fn(boolean, boolean)
RETURNS boolean AS $$ SELECT NULL::BOOLEAN; $$ LANGUAGE sql IMMUTABLE",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "alter_op_test_fn",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " SELECT NULL::BOOLEAN; ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 67,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 98,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "immutable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 111,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 42,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 59,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "bool",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 4 1`] = `
[
  "CREATE FUNCTION customcontsel(internal, oid, internal, integer)
RETURNS float8 AS 'contsel' LANGUAGE internal STABLE STRICT",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "customcontsel",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "contsel",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 79,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "internal",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 92,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "stable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 110,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "strict",
                  "location": 117,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "internal",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "oid",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "internal",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 55,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 72,
              "names": [
                {
                  "String": {
                    "sval": "float8",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 7 1`] = `
[
  "CREATE OPERATOR === (
    LEFTARG = boolean,
    RIGHTARG = boolean,
    PROCEDURE = alter_op_test_fn,
    COMMUTATOR = ===,
    NEGATOR = !==,
    RESTRICT = customcontsel,
    JOIN = contjoinsel,
    HASHES, MERGES
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 36,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "bool",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leftarg",
                  "location": 26,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "bool",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 49,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 85,
                      "names": [
                        {
                          "String": {
                            "sval": "alter_op_test_fn",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 73,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "===",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "commutator",
                  "location": 107,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "!==",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "negator",
                  "location": 129,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 159,
                      "names": [
                        {
                          "String": {
                            "sval": "customcontsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "restrict",
                  "location": 148,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 185,
                      "names": [
                        {
                          "String": {
                            "sval": "contjoinsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "join",
                  "location": 178,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "hashes",
                  "location": 202,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "merges",
                  "location": 210,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "===",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 18 1`] = `
[
  "SELECT pg_describe_object(refclassid,refobjid,refobjsubid) as ref, deptype
FROM pg_depend
WHERE classid = 'pg_operator'::regclass AND
      objid = '===(bool,bool)'::regoperator
ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 80,
                  "relname": "pg_depend",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 187,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "ref",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "refclassid",
                                },
                              },
                            ],
                            "location": 26,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "refobjid",
                                },
                              },
                            ],
                            "location": 37,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "refobjsubid",
                                },
                              },
                            ],
                            "location": 46,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_describe_object",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 67,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "deptype",
                          },
                        },
                      ],
                      "location": 67,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "classid",
                              },
                            },
                          ],
                          "location": 96,
                        },
                      },
                      "location": 104,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 106,
                              "sval": {
                                "sval": "pg_operator",
                              },
                            },
                          },
                          "location": 119,
                          "typeName": {
                            "location": 121,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "objid",
                              },
                            },
                          ],
                          "location": 140,
                        },
                      },
                      "location": 146,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 148,
                              "sval": {
                                "sval": "===(bool,bool)",
                              },
                            },
                          },
                          "location": 164,
                          "typeName": {
                            "location": 166,
                            "names": [
                              {
                                "String": {
                                  "sval": "regoperator",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 130,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 31 1`] = `
[
  "SELECT oprrest, oprjoin FROM pg_operator WHERE oprname = '==='
  AND oprleft = 'boolean'::regtype AND oprright = 'boolean'::regtype",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 29,
                  "relname": "pg_operator",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oprrest",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oprjoin",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oprname",
                              },
                            },
                          ],
                          "location": 47,
                        },
                      },
                      "location": 55,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 57,
                          "sval": {
                            "sval": "===",
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oprleft",
                              },
                            },
                          ],
                          "location": 69,
                        },
                      },
                      "location": 77,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 79,
                              "sval": {
                                "sval": "boolean",
                              },
                            },
                          },
                          "location": 88,
                          "typeName": {
                            "location": 90,
                            "names": [
                              {
                                "String": {
                                  "sval": "regtype",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oprright",
                              },
                            },
                          ],
                          "location": 102,
                        },
                      },
                      "location": 111,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 113,
                              "sval": {
                                "sval": "boolean",
                              },
                            },
                          },
                          "location": 122,
                          "typeName": {
                            "location": 124,
                            "names": [
                              {
                                "String": {
                                  "sval": "regtype",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 65,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 40 1`] = `
[
  "ALTER OPERATOR === (boolean, boolean) SET (RESTRICT = contsel)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOperatorStmt": {
            "opername": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                {
                  "TypeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "===",
                  },
                },
              ],
            },
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 54,
                      "names": [
                        {
                          "String": {
                            "sval": "contsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "restrict",
                  "location": 43,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 52 1`] = `
[
  "ALTER OPERATOR === (boolean, boolean) SET (RESTRICT = NONE, JOIN = NONE)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOperatorStmt": {
            "opername": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                {
                  "TypeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "===",
                  },
                },
              ],
            },
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "restrict",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "join",
                  "location": 60,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 63 1`] = `
[
  "ALTER OPERATOR === (boolean, boolean) SET (RESTRICT = customcontsel, JOIN = contjoinsel)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOperatorStmt": {
            "opername": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                {
                  "TypeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "===",
                  },
                },
              ],
            },
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 54,
                      "names": [
                        {
                          "String": {
                            "sval": "customcontsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "restrict",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 76,
                      "names": [
                        {
                          "String": {
                            "sval": "contjoinsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "join",
                  "location": 69,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 77 1`] = `
[
  "ALTER OPERATOR === (boolean, boolean) SET (COMMUTATOR = ====)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOperatorStmt": {
            "opername": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                {
                  "TypeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "===",
                  },
                },
              ],
            },
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "====",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "commutator",
                  "location": 43,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 85 1`] = `
[
  "ALTER OPERATOR & (bit, bit) SET ("Restrict" = _int_contsel, "Join" = _int_contjoinsel)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOperatorStmt": {
            "opername": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 18,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bit",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": -1,
                        },
                      },
                    ],
                  },
                },
                {
                  "TypeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bit",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": -1,
                        },
                      },
                    ],
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "&",
                  },
                },
              ],
            },
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 46,
                      "names": [
                        {
                          "String": {
                            "sval": "_int_contsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Restrict",
                  "location": 33,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 69,
                      "names": [
                        {
                          "String": {
                            "sval": "_int_contjoinsel",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Join",
                  "location": 60,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 90 1`] = `
[
  "CREATE USER regress_alter_op_user",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_alter_op_user",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 93 1`] = `
[
  "ALTER OPERATOR === (boolean, boolean) SET (RESTRICT = NONE)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOperatorStmt": {
            "opername": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                {
                  "TypeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "===",
                  },
                },
              ],
            },
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "restrict",
                  "location": 43,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`alter_operator.sql > line 96 1`] = `
[
  "RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
